# dharma-transcriptions

./: .gitignore  README.md  pyproject.toml
TREINAMENTO/output/: subtitles.srt  transcription.txt
dharma_transcriptions/: __init__.py  app.py  database.py  routes.py  training_manager.py  transcription.py  transcriptions.db  utils.py  whisper_training.py  whisper_transcriber.py  youtube.py
dharma_transcriptions/TREINAMENTO/referencia_corrigida/: Prece das Sete Linhas.txt
dharma_transcriptions/downloads/Como conciliar o princípio da não ação com a ação no mundo_/: subtitles.srt  transcription.txt
dharma_transcriptions/downloads/Como lidar com a morte_/: subtitles.srt  transcription.txt
dharma_transcriptions/downloads/Lama Samten poderia falar sobre os sonhos_/: subtitles.srt  transcription.txt
dharma_transcriptions/downloads/Qual a importância de dedicar os méritos_/: subtitles.srt  transcription.txt
static/css/: style.css
templates/: base.html  index.html  repository.html  view_transcription.html
