[tool.poetry]
name = "dharma-transcriptions"
version = "0.1.0"
description = ""
authors = ["Diego Guerreiro <diego.g.bernardes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
flask = "^3.1.0"
yt-dlp = "^2024.12.6"
whisper = "^1.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
